--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,28 @@
 .App {
   text-align: center;
+  position: relative;
+}
+.pop{
+  position: absolute;
+  top: 25%;
+  /* left: 25%; */
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.lor{
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-wrap: wrap;
+}
+.lor div{
+  width: 20vw;
+  margin: 3rem;
+  padding: 2rem;
+}
+.another{
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  font-size: 5rem;
+  margin-top: 15%;
+  color: red;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
